add: LevelsMenu + ConsoleKey Esc

--- a/MazeAStar.csproj
+++ b/MazeAStar.csproj
@@ -11,6 +11,9 @@
     <None Update="Config\gameconfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Config\levels.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
